# eAwaiter

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
api_navigation/: __init__.py  api_navigation.py
utils/: exception.py
waiter/: __init__.py  helpers.py  waiter.py
